fix horizontal scrollbar when clicking the menu button

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@ body{
 }
 #navbarMenuContent {
     margin-top: .75rem;
-    margin-right: -15px;
-    margin-left: -15px;
+    margin-right: -12px;
+    margin-left: -14px;
 }
 #navbarMenuContent ul li {
     border-bottom: 1px solid #000;
